...
        }

        ToolbarItemGroup(placement: .secondaryAction) {
            Button {
                toggleTrashAction()
            } label: {
                Label(isShowingTrash ? "Show Notes" : "Show Trash", systemImage: isShowingTrash ? "note.text" : "archivebox")
            }
            .accessibilityIdentifier("toggle-trash-button")

            Button(role: .destructive) {
                archiveAction()
            } label: {
                Label("Move to Trash", systemImage: "trash")
            }
            .disabled(selectedNoteIsArchived)
            .accessibilityIdentifier("move-to-trash-button")
        }
        #else
        ToolbarItemGroup(placement: .primaryAction) {
            Button {
                createAction()
            } label: {
...
